--- a/app/assets/stylesheets/urls.css.scss
+++ b/app/assets/stylesheets/urls.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Urls controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+h1 {
+padding-top: 50px;
+font-size: 75px;
+}
+
+h4 {
+font-weight: 100;
+}
+
