--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Wendy+One' rel='stylesheet' type='text/css'>
+	<%= favicon_link_tag %>
   <title>Abbrev.me | Keep it short</title>
 <!-- GOOGLE ANALYTICS -->
 	<script type="text/javascript">
