--- a/app/views/urls/show.html.erb
+++ b/app/views/urls/show.html.erb
@@ -3,5 +3,7 @@
 	<p id="intro">Your abbreviated URL:</p>
 	<%= link_to request.host_with_port + '/' + @url.shortened_url, request.host_with_port + '/' + @url.shortened_url, :target => "_blank" %> <br>
 		<br>
-	<%= link_to "Click here to shorten another URL!", root_path %>
 </div>
+	<div id="shorten_another">
+	<%= link_to "Click here to shorten another URL!", root_path %>
+	</div>
