implemented devise + sessions, edited index view

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,20 @@
 	text-align: center;
 }
 
+table th { 
+  font-weight: bold; 
+}
+table td, table th { 
+  padding: 9px 25px; 
+  text-align: left; 
+	font-size: 20px;
+}
+
+
+#navbar {
+	text-align: right;
+}
+
 #results {
 	padding-top: 10%;
 	font-size: 35px;
