--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+	<div id="navbar">
+	  <% if current_user %>
+	    Logged in as <%= current_user.email %>.
+			<%= link_to "Log out", destroy_user_session_path %>
+		<% else %>
+			<%= link_to "Sign up", new_user_registration_path %> |
+			<%= link_to "Log in", new_user_session_path %>
+		<% end %>
+	</div>
 <%= yield %>
 
 </body>
