minor text change on index view

--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -1,6 +1,6 @@
 <div id="results">
 	<p class="notice"><%= notice %></p>
-	<p id="intro">Your abbreviated URLs:</p>
+	<p id="intro">Your abbreviated URLs</p>
 	<table>
 	  <thead>
 	    <tr>
