--- a/app/assets/stylesheets/urls.css.scss
+++ b/app/assets/stylesheets/urls.css.scss
@@ -11,3 +11,29 @@ h4 {
 font-weight: 100;
 }
 
+
+.submit {
+margin-top: 10px;
+height: 28px;
+width: 135px;
+border: 1px solid;
+background: red;
+color: white;
+border-radius: 6px 6px;
+font-size: 16px;
+
+}
+.input {
+height: 30px;
+width: 450px;
+font-size: 18px;
+color: red;
+font-weight: bold;
+border: 2px solid;
+border-radius: 6px 6px;
+}
+
+::-webkit-input-placeholder {
+color: red;
+}
+
